the structure of data reception, data unloading has been redesigned, the database has been redesigned
